--- a/Hash.cbp
+++ b/Hash.cbp
@@ -2,28 +2,26 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Hash" />
+		<Option title="hash" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Hash" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/hash" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Hash" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/hash" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -33,9 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="include/Hash.h" />
+		<Unit filename="Hash.cpp" />
+		<Unit filename="Hash.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/Hash.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
